# Umazen-AI

./: README.md  Umazen README.md  Umazen codebase structure
api/graphql/resolvers/: model_resolver.ts  pricing_resolver.ts
api/graphql/schema/: inference.graphql  model.graphql
api/rest/: openapi.yaml
api/rest/src/middleware/: auth.ts  rate_limit.ts
federated-learning/client/py/: setup.py
federated-learning/client/py/src/: client.py
federated-learning/client/py/src/utils/: data_loader.py  zk_helper.py
federated-learning/coordinator/src/: main.rs
federated-learning/coordinator/src/aggregation/: fedavg.rs  mod.rs  secure_agg.rs
federated-learning/coordinator/src/metrics/: prometheus.rs
federated-learning/coordinator/src/network/: peer_discovery.rs  rpc_server.rs
federated-learning/coordinator/src/storage/: model_cache.rs
frontend/: package.json  vite.config.ts
frontend/src/: main.ts
frontend/src/stores/: useMarketStore.ts  useWalletStore.ts
model-nft/: Cargo.toml  Xargo.toml  build.rs
model-nft/migrations/: v1_to_v2.rs
model-nft/src/: lib.rs
model-nft/src/errors/: mod.rs
model-nft/src/instructions/: claim.rs  mint.rs  mod.rs  stake.rs  transfer.rs
model-nft/src/state/: mod.rs  nft.rs  royalty.rs
model-nft/src/utils/: metadata.rs  validation.rs
model-nft/tests/: integration.rs
model-nft/tests/unit/: state_tests.rs
pricing-engine/: base_calculator.rs  lib.rs  reinforcement.rs
prover/: main.rs  zk_generator.rs
prover/utils/: hash.rs  merkle.rs
scripts/deployment/: deploy_all.sh  upgrade_program.sh  verify_programs.sh
scripts/keygen/: generate_keys.sh
scripts/migration/: rollback.sh  v1_to_v2.rs
sdk/js/: package.json  tsconfig.json
sdk/js/src/: index.ts
sdk/js/src/clients/: BaseClient.ts  NFTClient.ts  TrainingClient.ts
sdk/js/src/types/: models.ts  transactions.ts
sdk/js/src/utils/: crypto.ts  solana.ts
sdk/rust/: lib.rs
sdk/rust/api/: mod.rs  rpc_client.rs
zkml/circuits/gradient-verifier/: circuit.circom
zkml/circuits/gradient-verifier/inputs/: constraints.csv  test_input.json
zkml/circuits/gradient-verifier/scripts/: compile.sh  test_circuit.sh
