[workspace]
members = [
    "blockchain/programs/model-nft",
    "blockchain/programs/training-pool",
    "blockchain/sdk/rust",
    "zkml/prover",
    "federated-learning/coordinator",
    "marketplace/pricing-engine",
]
resolver = "2"
default-members = ["blockchain/programs/model-nft"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package]
name = "umazen-model-nft"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/umazen-labs/model-nft"
description = "SPL-compatible NFT program for AI model ownership"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["derive"] }
anchor-spl = "0.29.0"
solana-program = "1.16.6"
arrayref = "0.3.7"
borsh = { version = "0.10.3", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.50"

[dev-dependencies]
solana-program-test = "1.16.6"
solana-sdk = "1.16.6"
assert_matches = "1.5.0"

[features]
no-entrypoint = []
test-utils = []

[package]
name = "umazen-training-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.29.0"
rayon = "1.8.0"
blake3 = "1.4.1"
curve25519-dalek = { version = "4.1.1", features = ["serde"] }
merlin = "3.0.0"
rand_core = "0.6.4"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }

[dev-dependencies]
proptest = "1.2.0"

[package]
name = "umazen-zk-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
circom-compiler = { git = "https://github.com/iden3/circom", features = ["wasm"] }
arkworks = { version = "0.4.1", features = ["curve25519", "ed_on_bn254"] }
bellman = "0.13.0"
pairing = "0.25.0"
num-bigint = "0.4.4"
serde_json = "1.0.107"
rayon = "1.8.0"

[features]
gpu-accel = ["arkworks/gpu"]

[package]
name = "umazen-fl-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
prost = "0.12.1"
async-std = { version = "1.12.0", features = ["unstable"] }
ndarray = "0.15.6"
rayon = "1.8.0"
reqwest = { version = "0.11.22", features = ["json"] }
pyo3 = { version = "0.19.2", features = ["extension-module"] }

[features]
cuda = ["ndarray/nightly"]

[package]
name = "umazen-pricing-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
statrs = "0.16.0"
rayon = "1.8.0"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11.22"
chrono = { version = "0.4.31", features = ["serde"] }
bigdecimal = "0.4.1"

[dev-dependencies]
test-case = "3.3.1"

[package]
name = "umazen-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.16.6"
solana-sdk = "1.16.6"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0.107"
anchor-client = "0.29.0"
bs58 = "0.5.0"

[dev-dependencies]
solana-validator = "1.16.6"

